--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Vote System</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Vote System</h1>
+        <h1>Add muscle or lose weight?</h1>
         <div class="vote-buttons">
             <button onclick="incrementUpvote()">⬆️</button>
             <button onclick="incrementDownvote()">⬇️</button>
@@ -33,3 +32,4 @@
     </script>
 </body>
 </html>
+
