--- a/index.html
+++ b/index.html
@@ -2,16 +2,63 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Voting System</title>
     <style>
+        /* Full page height and center everything */
+        body, html {
+            height: 100%;
+            margin: 0;
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #f8f9fa;
+        }
+
+        /* Centering the vote-buttons section vertically and horizontally */
         .vote-buttons {
             display: flex;
-            gap: 10px;
+            flex-direction: column;
             align-items: center;
-            font-size: 20px;
+            justify-content: center;
+            gap: 50px; /* Increased space between elements */
         }
+
+        /* Button styling with extra large size */
         button {
-            font-size: 24px;
+            font-size: 150px; /* Much larger font size */
+            padding: 50px; /* Even larger padding for bigger touch targets */
+            cursor: pointer;
+            border: none;
+            background-color: #e0e0e0;
+            border-radius: 50%;
+            transition: transform 0.1s ease;
+            box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.2);
+        }
+
+        /* Hover effect for the buttons */
+        button:hover {
+            transform: scale(1.1);
+            background-color: #d1d1d1;
+        }
+
+        /* Vote count in larger size */
+        #vote-count {
+            font-size: 100px;
+            font-weight: bold;
+            color: #333;
+        }
+
+        /* Responsive design for smaller screens */
+        @media (max-width: 600px) {
+            button {
+                font-size: 180px;  /* Much bigger for mobile */
+                padding: 70px;
+            }
+            #vote-count {
+                font-size: 120px;
+            }
         }
     </style>
 </head>
@@ -49,6 +96,7 @@
 
         // Initial vote count display
         updateVoteCount();
+
     </script>
 </body>
 </html>
